Closed Bug 1770331 Opened 2 years ago Closed 2 years ago

Sorting input history using use_count in Adaptive History Autofill and UrlbarProviderInputHistory may be wrong

Categories

(Firefox :: Address Bar, defect, P1)

defect
Points:
3

Tracking

()

VERIFIED FIXED
102 Branch
Tracking Status
firefox102 --- verified
firefox103 --- verified

People

(Reporter: daisuke, Assigned: daisuke)

References

Details

Attachments

(1 file)

Currently, we store input history data as is = case-sensitive. That means if user visits https://www.mozilla.org/contribute/ by user’s input m and visits the same URL by M is stored as different record.
As Adaptive History Autofill and UrlbarProviderInputHistory sort the table with case-insensitive using use_count, above m and M is handled as different data even the URL is same. Therefore, the sorting may be wrong.

Severity: -- → S3
Priority: -- → P1
Assignee: nobody → daisuke

Just to provide more info here in the bug, see also the discussion in https://phabricator.services.mozilla.com/D146864#4802384 and later comments.

Blocks: 1597791
No longer depends on: 1597791

I was tagged in the original review, so far I agree with storing lowercase.

Pushed by dakatsuka.birchill@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/49a45dfe12aa
Store user's input in moz_inputhistory as lower case. r=adw,mak
Status: ASSIGNED → RESOLVED
Closed: 2 years ago
Resolution: --- → FIXED
Target Milestone: --- → 102 Branch

Hello

Confirming this issue as verified fixed on 103.0a1(20220616190155) and 102.0b9-build1 (20220616185542) using macOS 11.6.6, Ubuntu 20 and Windows 11.

Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: