Bug 1770331: Store user's input in moz_inputhistory as lower case. r=adw,mak

Differential Revision: https://phabricator.services.mozilla.com/D147050