toolkit/components/places/Database.h
@@ -18,7 +18,7 @@
 
 // This is the schema version. Update it at any schema change and add a
 // corresponding migrateVxx method below.
-#define DATABASE_SCHEMA_VERSION 66
+#define DATABASE_SCHEMA_VERSION 67
 
 // Fired after Places inited.
 #define TOPIC_PLACES_INIT_COMPLETE "places-init-complete"
@@ -339,6 +339,7 @@ class Database final : public nsIObserver, public nsSupportsWeakReference {
   nsresult MigrateV64Up();
   nsresult MigrateV65Up();
   nsresult MigrateV66Up();
+  nsresult MigrateV67Up();
 
   void MigrateV52OriginFrecencies();
 
